--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,6 +1,5 @@
-// Fonts
-
-$font-family-sans-serif: "Open Sans", sans-serif;
+// Font
+$font-family-sans-serif: 'Open Sans', sans-serif;
 
 // Colors
 $primary: #4555d2;
@@ -57,4 +56,4 @@ $input-border-radius: $input-radius;
 $input-border-radius-sm: $input-radius;
 $input-border-radius-lg: $input-radius;
 
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import '../node_modules/bootstrap/scss/bootstrap';
