--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,46 @@
+.xl-text {
+  font-size: 75px;
+}
+
 .btn-outline-secondary {
   color: var(--bs-secondary);
 }
 
 .btn-outline-secondary:hover {
   color: #fff;
+}
+
+.header .decoration-star {
+  top: 80px;
+  left: -200px;
+  width: 500px;
+  opacity: 0.7;
+}
+
+.header .decoration-star-2 {
+  top: 80px;
+  right: -200px;
+  width: 500px;
+  opacity: 0.7;
+}
+
+@media screen and (max-width: 992px) {
+  .xl-text {
+    font-size: 50px;
+  }
+  .header {
+    margin-top: 0px !important;
+    text-align: center;
+  }
+  .header .decoration-star {
+    left: -100px;
+    width: 250px;
+  }
+  .header .decoration-star-2 {
+    right: -100px;
+    width: 250px;
+  }
+  .header .image-container {
+    margin-top: 30px;
+  }
 }
