--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,16 @@
   opacity: 0.7;
 }
 
+.navbar-sticky {
+  background: #fff;
+  opacity: 0.9;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.navbar {
+  transition: all 0.5s ease-in-out;
+}
+
 @media screen and (max-width: 992px) {
   .xl-text {
     font-size: 50px;
