--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,6 +26,16 @@
     opacity: .7;
 }
 
+.navbar-sticky {
+    background: #fff;
+    opacity: .9;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, .1);
+}
+
+.navbar {
+    transition: all .5s ease-in-out;
+}
+
 @media screen and (max-width: 992px) {
     .xl-text {
         font-size: 50px;
