--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@
   width: 500px;
   opacity: 0.7;
 }
-
 .header .decoration-star-2 {
   top: 80px;
   right: -200px;
@@ -32,6 +31,11 @@
 
 .navbar {
   transition: all 0.5s ease-in-out;
+}
+
+.details .decoration-star {
+  left: -200px;
+  width: 500px;
 }
 
 @media screen and (max-width: 992px) {
