--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@
   opacity: 0.7;
 }
 
+.details .decoration-star {
+  right: -200px;
+  width: 500px;
+}
+
 .navbar-sticky {
   background: #fff;
   opacity: 0.9;
@@ -56,5 +61,15 @@
   }
   .header .image-container {
     margin-top: 30px;
+  }
+  .services .col-md-4 {
+    border-bottom: 1px #ccc solid;
+    margin: 10px 0;
+  }
+  .details-2 {
+    margin-top: 20px !important;
+  }
+  .details-2 .decoration-star {
+    top: 300px;
   }
 }
