--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,13 @@
     }
 }
 
+.details {
+    .decoration-star {
+        right: -200px;
+        width: 500px;
+    }
+}
+
 .navbar-sticky {
     background: #fff;
     opacity: .9;
@@ -66,6 +73,19 @@
 
         .image-container {
             margin-top: 30px;
+        }
+    }
+
+    .services .col-md-4 {
+        border-bottom: 1px #ccc solid;
+        margin: 10px 0;
+    }
+
+    .details-2 {
+        margin-top: 20px !important;
+
+        .decoration-star {
+            top: 300px;
         }
     }
 }
