--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@
   width: 500px;
 }
 
+.contact .decoration-star {
+  left: -200px;
+  width: 500px;
+}
+
 @media screen and (max-width: 992px) {
   .xl-text {
     font-size: 50px;
