--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,6 +52,13 @@
     }
 }
 
+.contact {
+    .decoration-star {
+        left: -200px;
+        width: 500px;
+    }
+}
+
 @media screen and (max-width: 992px) {
     .xl-text {
         font-size: 50px;
