--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,28 @@
   width: 500px;
 }
 
+.to-top-btn {
+  position: fixed;
+  z-index: 20;
+  bottom: 20px;
+  right: 20px;
+  border: none;
+  background-color: #44434a;
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  outline: none;
+  transition: all 0.5s ease-in-out;
+  opacity: 0;
+}
+.to-top-btn:hover {
+  background-color: #1d1d21;
+}
+
+.show {
+  opacity: 1;
+}
+
 @media screen and (max-width: 992px) {
   .xl-text {
     font-size: 50px;
