--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,6 +59,29 @@
     }
 }
 
+.to-top-btn {
+    position: fixed;
+    z-index: 20;
+    bottom: 20px;
+    right: 20px;
+    border: none;
+    background-color: #44434a;
+    width: 52px;
+    height: 52px;
+    border-radius: 50%;
+    outline: none;
+    transition: all 0.5s ease-in-out;
+    opacity: 0;
+
+    &:hover {
+        background-color: #1d1d21;
+    }
+}
+
+.show {
+    opacity: 1;
+}
+
 @media screen and (max-width: 992px) {
     .xl-text {
         font-size: 50px;
